--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="lib/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="ss/style.min.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Admin Builder Status</title>
+    <title>Plugins Status</title>
     <style>
     canvas{
         -moz-user-select: none;
@@ -20,7 +20,7 @@
 <body ng-app="slo">
     <div class="container-fluid" ng-controller="mainCtrl as mC">
         <div class="row" ng-include="'templates/content.html'">
-          
+
         </div>
     </div>
 
